syntax = "proto3";

package go.micro.srv.GetIndex;

service GetIndex {
  rpc GetIndex(Request) returns (Response) {}
}

message Request {
}

message Response {
  string ErrNo = 1;
  string ErrMsg = 2;
  bytes Data = 3;
}
